# Flappy_Bird

./: CMakeLists.txt
inc/: Bird.hpp  Bonus.hpp  Config.hpp  Func.hpp  Game.hpp  Pipe.hpp
src/: Bird.cpp  Bonus.cpp  Func.cpp  Game.cpp  Pipe.cpp
